kotlin/programming-kotlin_code/functions/output/inferunit.output
inferunit.kts:3:23: error: type mismatch: inferred type is Unit but String was expected
val message: String = sayHello() //ERROR
                      ^
